--- a/OBLIG 1/src/main/resources/kino.html
+++ b/OBLIG 1/src/main/resources/kino.html
@@ -4,10 +4,14 @@
 <head>
     <meta charset="UTF-8">
     <title>Oblig1, DATA1700</title>
-    <script src="kino.js"></script>
+    <script src="kino.js">
+        validateInputs()
+    </script>
+
 </head>
 <body>
 <section id="main">
+
     <h1>Oblig 1. DATA1700</h1>
     <h2>Bestilling av Kinobilleter</h2>
         <label for="Film">Velg film: </label>
@@ -37,7 +41,7 @@
 
             <div class="input-controll">
         <label for="EtterNavn">Etternavn</label>
-        <input id="etterNavn" name="etterNavn" type="text" value="" required minlength="3" maxlength="15" placeholder="Etternavn">
+                <input id="etterNavn" name="etterNavn" type="text" value="" required minlength="3" maxlength="15" placeholder="Etternavn">
         <div class="error"></div>
             </div>
 
@@ -49,18 +53,22 @@
 
             <div class="input-controll">
         <label for="E-post">E-post</label>
-        <input id="E-post" name="E-post" type="text" value="" required minlength="3" maxlength="15" placeholder="Epost@eksempel.no">
+        <input id="E-post" name="E-post" type="text" value="" required minlength="3" maxlength="30" placeholder="Epost@eksempel.no">
         <div class="error"></div>
             </div>
         <input type="submit" value="submit">
+            <button onclick="billetter"></button>
         <h2></h2>
-        <button onclick="kjøpbillett()">Kjøp Billett</button>
+        <button onclick="validateInputs()">Kjøp Billett</button>
+            <div id="Billetter"></div>
     </form>
     </div>
+
     <!-- Vise billetter -->
     <h2>Alle Billetter</h2>
     <div id="ut"></div>
     <br>
+
     <!-- Slette billetter -->
     <h3>Slett billett</h3>
     <button onclick="slettbilletter()">Slett billettene</button>
