--- a/OBLIG 1/src/main/resources/billett.html
+++ b/OBLIG 1/src/main/resources/billett.html
@@ -25,14 +25,16 @@
                 </td>
             </tr>
             <tr>
+
                 <th><label for="Antall">Antall:</label></th>
                 <td>
                     <input type="text" id="Antall" value="" style="width: 30px" min="1" required
-                    oninvalid="this.setCustomValidity('Velg antall må være mer enn 0')"
+                    oninvalid="this.setCustomValidity('Velg antall billetter')"
                     oninput="this.setCustomValidity('')">
                 </td>
             </tr>
             <tr>
+
                 <th><label for="Fornavn">Fornavn:</label></th>
                 <td>
                     <input type="text" id="Fornavn" value="" required placeholder="Fornavn"
